[build-scripts] launcher-generator: great refactoring
* add checks for produced output
* proper padding for resource section
* support adding more icons that were in template binary (fixed `updateGroupIcon`)
* modernize code: use fields and getters instead of accessing struct parts by name

GitOrigin-RevId: 9263568e575e2b8490c9af420836c6ac82056f71